example.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-python-app
  namespace: test
spec:
  selector:
    matchLabels:
      name: test-python-backend
  template:
    metadata:
      labels:
        name: test-python-backend
    spec:
      containers:
        - name: backend
          image: python:3.9
          imagePullPolicy: Always
          command: ["/bin/sh", "-ce", "tail -f /dev/null"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-python-service
  namespace: test
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80
      nodePort: 31222
  selector:
    name: test-python-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-python-ingress
  namespace: test
  annotations:
    k3s.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: test.python.ninox
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-python-service
              port:
                number: 80
